--- a/package.json
+++ b/package.json
@@ -2,20 +2,25 @@
   "name": "version2-black-excellence",
   "version": "0.1.0",
   "private": true,
+  "homepage": "blackexcellencemusicproject.com",
   "dependencies": {
     "@craco/craco": "^6.1.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "d3": "^7.0.0",
+    "gh-pages": "^3.2.3",
     "mime": "^1.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "serve": "^12.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
