--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -42,7 +43,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
+    "husky": ">=6",
+    "lint-staged": ">=10",
     "postcss": "^7.0.36",
+    "prettier": "2.7.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.2"
+  },
+  "lint-staged": {
+    "*.{js,html,jsx,css,md}": "prettier --write"
   }
 }
