chore: adding husky key to package.json

--- a/package.json
+++ b/package.json
@@ -51,5 +51,10 @@
   },
   "lint-staged": {
     "*.{js,html,jsx,css,md}": "prettier --write"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "prettier --write"
+    }
   }
 }
