--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "serve": "^12.0.0",
     "web-vitals": "^1.0.1"
   },
+  "engines" : {
+    "npm" : ">=7.0.0",
+    "node" : ">=14.0.0"
+  },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
