--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "serve": "^12.0.0",
     "web-vitals": "^1.0.1"
   },
+  "engines": {
+    "node": "14.17.3"
+},
   "scripts": {
     "start": "craco start",
     "build": "craco build",
