--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "format": "npx prettier --write ."
   },
   "eslintConfig": {
     "extends": [
